--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,11 +25,12 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: workflow
     steps:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2.3.1
         with:
-          key: "${{ secrets.MY_KEY }}"
+          key: "${{ secrets.KITCHEN_BOT_SECRET }}"
           known_hosts: "just-a-placeholder-so-we-dont-get-errors"
 
       - name: Generate auth hosts
