--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
       - '5432:5432'
   bot:
     build: .
-    command:
-      - sh -c "make migrate && python -m bot"
+    command: sh -c "make migrate && python -m bot"
     env_file:
       - ./.env
     restart: always
