--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -8,7 +8,7 @@ env:
   SERVER_HOST: 80.87.200.249
   SERVER_USER: root
   SERVER_PATH: /bot
-
+  DATABASE_URL: "postgresql+asyncpg://userrole:12345@localhost/mydb"
 
 jobs:
   workflow:
@@ -24,18 +24,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: workflow
     steps:
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2.3.1
+      - name: Run command on remote server
+        uses: D3rHase/ssh-command-action@v0.2.2
         with:
-          key: "${{ secrets.KITCHEN_BOT_SECRET }}"
-          known_hosts: "just-a-placeholder-so-we-dont-get-errors"
-
-      - name: Generate auth hosts
-        run: ssh-keyscan -H ${{ env.SERVER_HOST }} >> ~/.ssh/known_hosts
-
-      - run: rsync --archive --compress --progress . ${{ env.SERVER_USER }}@${{ env.SERVER_HOST }}:${{ env.SERVER_PATH }}
-
-      - name: checkout repo
-        uses: actions/checkout@v3
-      - name: docker-compose
-        run: docker-compose up -d
+          host: ${{secrets.SSH_HOST}}
+          user: ${{secrets.SSH_USER}}
+          private_key: ${{secrets.SSH_PRIVATE_KEY}}
+          command: |
+            cd ${{ secrets.PROJECT_FOLDER }};
+            git checkout main;
+            git pull;
+            docker-compose --file docker-compose.prod.yml down;
+            docker-compose --file docker-compose.prod.yml up -d;
+            docker system prune --all --force;
