--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -28,7 +28,7 @@ jobs:
           user: ${{secrets.SSH_USER}}
           private_key: ${{secrets.KITCHEN_BOT_SECRET}}
           command: |
-            cd ${{ $SERVER_PATH }};
+            cd ${{ SERVER_PATH }};
             git checkout main;
             git pull;
             docker-compose --file docker-compose.prod.yml down;
