--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -18,16 +18,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: workflow
     steps:
-      - name: Run command on remote server
-        uses: D3rHase/ssh-command-action@v0.2.2
-        with:
-          host: ${{secrets.SSH_HOST}}
-          user: ${{secrets.SSH_USER}}
-          private_key: ${{secrets.KITCHEN_BOT_SECRET}}
-          command: |
-            cd ${{secrets.SERVER_PATH}};
-            git checkout main;
-            git pull;
-            docker-compose --file docker-compose.prod.yml down;
-            docker-compose --file docker-compose.prod.yml up -d;
-            docker system prune --all --force;
+      - name: Create SSH key
+        run: |
+          mkdir -p ~/.ssh/
+          echo "$SSH_PRIVATE_KEY" > ../private.key
+          sudo chmod 600 ../private.key
+          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
+
+      - name: Deploy
+        run: |
+          cd ${{secrets.SERVER_PATH}};
+          git checkout main;
+          git pull;
+          docker-compose --file docker-compose.prod.yml down;
+          docker-compose --file docker-compose.prod.yml up -d;
+          docker system prune --all --force;
