--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -3,29 +3,29 @@ on:
   push:
     branches:
       - master
-
 jobs:
-
-  deploy:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: checkout repo
         uses: actions/checkout@v3
-      - name: Set up Python
+      - name: set up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.11
-          bundler-cache: true
-      - name: Executing remote ssh commands using ssh key
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            whoami
-            ls -al;
-
+  prepare-environment:
+    runs-on: self-hosted
+    needs: test
+    steps:
+      - name: Stop and remove containers, networks
+        run: docker-compose down
+      - name: Remove unused data
+        run: docker system prune -a -f
+  deploy:
+    runs-on: self-hosted
+    needs: prepare-environment
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
       - name: docker-compose
         run: docker-compose up -d
