--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.11
+      - name: echo
+        run: cd ./bot; ls -la
   prepare-environment:
     runs-on: self-hosted
     needs: test
@@ -21,6 +23,8 @@ jobs:
         run: docker compose down
       - name: Remove unused data
         run: docker system prune -a -f
+      - name: echo
+        run: cd ./bot; ls -la
   deploy:
     runs-on: self-hosted
     needs: prepare-environment
@@ -29,3 +33,5 @@ jobs:
         uses: actions/checkout@v3
       - name: docker-compose
         run: docker compose up -d
+      - name: echo
+        run: cd ./bot; ls -la
