--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ TELEGRAM_API_KITCHEN=5815106137:AAF4uWP9VRzHuI_YpFaPb2FTYXlNeMY7E_U
 DB_USER=userrole
 DB_NAME=12345
 DB_PORT=5432
+DB_HOST=80.87.200.249
 SQLALCHEMY_WARN_20=1
