--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - master
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: self-hosted
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
@@ -13,20 +13,18 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.11
-  prepare-environment:
-    runs-on: self-hosted
-    needs: test
-    steps:
-      - name: Stop and remove containers, networks
-        run: docker compose down
-      - name: Remove unused data
-        run: docker system prune -a -f
-
-  deploy:
-    runs-on: self-hosted
-    needs: prepare-environment
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v3
-      - name: docker compose
-        run: docker compose up -d
+      - name: Run command on remote server
+        uses: D3rHase/ssh-command-action@v0.2.2
+        with:
+          host: ${{secrets.SSH_HOST}}
+          user: ${{secrets.SSH_USER}}
+          private_key: ${{secrets.SSH_PRIVATE_KEY}}
+          command: |
+            su user;
+            pwd;
+            cd ${{ secrets.SERVER_PATH }};
+            git checkout main;
+            git pull;
+            docker-compose --file docker-compose.prod.yml down;
+            docker-compose --file docker-compose.prod.yml up -d;
+            docker system prune --all --force;
