--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   deploy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
