--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           host: ${{secrets.SSH_HOST}}
           user: ${{secrets.SSH_USER}}
-          private_key: ${{secrets.SSH_PRIVATE_KEY}}
+          private_key: ${{secrets.USER_UBUNTU_PRIVATE_KB}}
+          host_fingerprint: ${{secrets.USER_UBUNTU_PUBLIC_KB}}
           command: |
             su user;
             pwd;
