--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 aiogram==3.0.0
 alembic==1.12.0
 asyncpg
-natasha
+natasha~=1.6.0
 python-dotenv
+SQLAlchemy==2.0.20
+requests~=2.31.0
+beautifulsoup4~=4.12.2
