--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - pgdata:/var/lib/postgresql/data
     restart: on-failure
     environment:
-      POSTGRES_USER: userrole
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_DB: mydb
+      PGUSER: userrole
+      PGPASSWORD: 12345
+      PGDATABASE: mydb
     ports:
       - '80.87.200.249:5432:5432'
   bot:
