--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 TELEGRAM_API_KITCHEN=5815106137:AAF4uWP9VRzHuI_YpFaPb2FTYXlNeMY7E_U
-DB_USER=userrole
-DB_NAME=12345
-DB_PORT=5432
-DB_HOST=80.87.200.249
+POSTGRES_PASSWORD="12345"
+POSTGRES_PORT="5432"
+POSTGRES_USER="userrole"
+POSTGRES_DB="mydb"
+POSTGRES_HOST="80.87.200.249"
