--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ POSTGRES_USER="userrole"
 POSTGRES_DB="mydb"
 POSTGRES_HOST="80.87.200.249"
 
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=None
+REDIS_PORT=6379
