--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,11 @@ services:
       - ./.env
     restart: on-failure
     ports:
-      - "80.87.200.249:6379:6379"
+      - ${REDIS_PORT}:${REDIS_PORT}
+    expose:
+      - ${REDIS_PORT}
+    volumes:
+      - /usr/src/app/data:/bitnami/redis/data
 
   postgres:
     image: postgres:15.1
@@ -35,3 +39,4 @@ services:
 
 volumes:
   pgdata:
+  redis-data:
