--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,10 +29,10 @@ services:
       - '5432:5432'
   bot:
     build:
-      context: .
-      dockerfile: buildfiles/Dockerfile
+      context: buildfiles
+      dockerfile: Dockerfile
     env_file:
-      - ./.env
+      - .env
     restart: always
     depends_on:
       - postgres
