--- a/buildfiles/Dockerfile
+++ b/buildfiles/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11
 WORKDIR /app
-COPY /requirements.txt requirements.txt
+COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 RUN chmod 755 .
-COPY / /app
+COPY ./ /app
