--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     env_file:
       - .env
     restart: always
+    command: sh -c "make migrate && python -m bot"
     depends_on:
       - postgres
       - redis
