--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - '5432:5432'
   bot:
     build:
-      dockerfile: Dockerfile
+      dockerfile: .
     env_file:
       - ./.env
     restart: always
