--- a/buildfiles/redis.conf
+++ b/buildfiles/redis.conf
@@ -1,4 +1,5 @@
-bind 0.0.0.0 80.87.200.249
+bind 0.0.0.0
+protected-mode yes
 rename-command CONFIG ""
-requirepass <PASS>
-masterauth <PASS>
+requirepass 12345
+masterauth 12345
