--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ POSTGRES_USER="userrole"
 POSTGRES_DB="mydb"
 POSTGRES_HOST="80.87.200.249"
 
-REDIS_HOST="redis"
+REDIS_HOST=80.87.200.249
+REDIS_PORT=6378
 REDIS_DB=0
-REDIS_PASSWORD="12345"
+REDIS_PASSWORD=12345
