change redis host

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ POSTGRES_USER="userrole"
 POSTGRES_DB="mydb"
 POSTGRES_HOST="80.87.200.249"
 
-REDIS_HOST=80.87.200.249
+REDIS_HOST=redis
 REDIS_PASSWORD=12345
